resource-manifests/istio/retries/sa-logic-subsets-shadowing-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-logic-canary
spec:
  hosts:
    - sa-logic
  http:
  - route: 
    - destination: 
        host: sa-logic
        subset: v1
      weight: 0
    - destination: 
        host: sa-logic
        subset: v2
      weight: 20
    timeout: 1s
    # retries:
    #   attempts: 3
    #   perTryTimeout: 3s
